Adjusting for nds and chord refactoring.

--- a/service/notes/runtimeReport.html
+++ b/service/notes/runtimeReport.html
@@ -309,7 +309,7 @@ Execution Statistics
 <td align=left>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;setTimestampFlag(boolean) void</td><td align=left>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0.000011</td><td align=left>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0.000011</td><td align=left>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2</td>
 </tr>
 <tr>
-<td align=left>uk.ac.standrews.cs.nds.p2p.impl</td><td align=left>0.188936</td><td align=left>0.188936</td><td align=left>687</td>
+<td align=left>uk.ac.standrews.cs.nds.p2p.keys</td><td align=left>0.188936</td><td align=left>0.188936</td><td align=left>687</td>
 </tr>
 <tr BGCOLOR="#ffffbb">
 <td align=left>&nbsp;&nbsp;&nbsp;&nbsp;Key</td><td align=left>&nbsp;&nbsp;&nbsp;&nbsp;0.187945</td><td align=left>&nbsp;&nbsp;&nbsp;&nbsp;0.188936</td><td align=left>&nbsp;&nbsp;&nbsp;&nbsp;597</td>
